# aetherus-events

./: .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  README.md  flake.nix
.agents/skills/rust-best-practice/: SKILL.md
.github/workflows/: bencher.yml  docs.yml
benches/: see_through_translucent.rs
example/: underwater.ae
src/: emission.rs  filter.rs  ledger.rs  lib.rs  maps.rs  mcrt.rs  prelude.rs  raw.rs  read.rs  reader.rs  src.rs  uid.rs
src/event/: event.rs  mcrt.rs
src/events/: emission.rs  event.rs  mcrt.rs  mod.rs
tools/: stash-hook.sh
