[package]
name = "aetherus-events"
version = "0.3.2"
edition = "2024"

[dependencies]
array-bytes = { version = "9.3.0", features = ["serde"] }
csv = "^1.4.0"
hashbrown = "0.17.0"
log = "^0.4.*"
num_enum = "^0.7.*"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.16.1", features = ["json"] }
smallvec = { version = "1.15.1", features = ["const_generics"] }
thousands = "0.2.0"
tokio = { version = "1.52.2", features = ["sync"] }

[dev-dependencies]
anyhow = "1.0.102"
criterion = { version = "^0.8.2", features = ["html_reports"] }
flate2 = "1.1.9"
rand = "0.10.1"
rusty-hook = "0.11.2"
tar = "0.4.45"
tempfile = "3.23.0"

[[bin]]
name = "filter_target"

[[bench]]
name = "read_allocate"
path = "benches/see_through_translucent.rs"
harness = false
